--- a/index.css
+++ b/index.css
@@ -1,31 +1,36 @@
 body {
-  padding: 10px;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  line-height: 1.6;
-  font-size: 18px;
-  background-image: url(https://www.bankrate.com/2020/08/19164919/What-is-cryptocurrency-840x720.jpeg);
-  background-size: 100%;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
+        Droid Sans, Helvetica Neue, sans-serif;
+    background-image: url(https://www.bankrate.com/2020/08/19164919/What-is-cryptocurrency-840x720.jpeg);
+    background-size: cover;
+    background-position: center;
 }
 
-/* Full height */
-/* height: 100%; */
+.container {
+    padding: 20px;
+    color: white;
+}
 
-/* Center and scale the image nicely */
-/* background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover; */
+form {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 8px;
+}
+
+form label {
+    color: white;
+}
 
 #btn {
-  margin-top: 22px;
-  margin-left: 44%;
+    margin-top: 10px;
 }
 
-#table {
-  margin-top: 10px;
-  margin-left: 20%;
-  margin-right: 10%;
+table {
+    color: white;
 }
 
-
+table th,
+table td {
+    border-color: white;
+}
